# ollama-proxy

./: .gitignore  API_COMPARISON.md  GEMINI.md  package-lock.json  pyproject.toml  test_output.txt
chat_test/: __init__.py  proxy_timing_probe.py  simple_chat.py  tool_calling_chat.py
docs/: OLLAMA_API.md  TOOL_CALLING.md
docs/js_pro_analysis/: 00_PROJECT_OVERVIEW.md  01_ARCHITECTURE.md  02_DOMAIN_LAYER.md  03_INFRASTRUCTURE_LAYER.md  04_INTERFACE_LAYER.md  05_SIMPLIFICATION_RECOMMENDATIONS.md  06_API_REFERENCE.md  07_RATE_LIMITING_LOGIC.md  08_STREAMING_IMPLEMENTATION.md  README.md
js_pro/: REFACTORING.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
js_pro/src/: index.test.ts  main.ts
js_pro/src/domain/: converter.test.ts  converter.ts  types.ts
js_pro/src/infrastructure/config/: manager.ts  provider_service.ts
js_pro/src/infrastructure/config/templates/: default-config.json  default-providers.json
js_pro/src/infrastructure/i18n/: index.ts
js_pro/src/infrastructure/logging/: logger.ts
js_pro/src/infrastructure/providers/: factory.test.ts  factory.ts
js_pro/src/infrastructure/ratelimit/: ratelimiter.ts
js_pro/src/infrastructure/storage/: usage.ts
js_pro/src/interface/http/: server.ts
js_pro/src/interface/http/routes/: admin.test.ts  admin.ts  (+5 more)
js_pro/src/interface/static/: index.html
js_pro/src/locales/: en.json  ja.json
moc_python/src/ollama_proxy/: converter.py
py_pro/src/ollama_proxy/: api.py  storage.py
src/ollama_proxy/: __init__.py  config.py  tracker.py
src/ollama_proxy/gui/: app.py  dashboard.py  settings.py
(+7 files in other folders)
