[project]
name = "ollama-proxy"
version = "0.1.0"
description = "LiteLLMを使用して様々なAIエンドポイントをOllama APIに変換するプロキシライブラリ"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.2",
    "httpx",
    "litellm",
    "pandas>=2.3.3",
    "streamlit>=1.54.0",
    "uvicorn>=0.40.0",
    "watchdog>=3.0.0",
]

[project.scripts]
ollama-proxy-server = "ollama_proxy.api:main"
ollama-proxy-dev = "ollama_proxy.api:dev_main"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG", "PT"]
# SIM117: async generatorではネストしたasync withを結合できない制約がある
ignore = ["SIM117"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ollama_proxy"]
